--- a/businessCard/index.html
+++ b/businessCard/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>Hello</div>
+    <div>Data Analysis application:</div>
+    <div><a target="_blank" href="https://install.appcenter.ms/users/Aleh_Fiadosau-epam.com/apps/DetalsAnalysisGamesCombatLogs/releases/6">Download</a></div>
 </body>
 </html>
