Update business card

--- a/businessCard/index.html
+++ b/businessCard/index.html
@@ -12,7 +12,7 @@
     <span class="about-me">
         <h4 style="margin: 10px 0;">Software enginer</h4>
         <span class="about-me__description">
-            <img src="src/images/me.jpg">
+            <img src="src/images/me.png">
             <div class="about-me__description_expirience-stack">
                 <p>Backend developer who is orientired by .Net</p>
                 <p>Development experience 2+ years.</p>
