Add social links to business card

--- a/businessCard/index.html
+++ b/businessCard/index.html
@@ -29,6 +29,12 @@
                 </ul>
                 <p>Developed my personal application: desktop app (WPF) and WEB app (ASP.Core + React.js).</p>
                 <p>The application allows parse combat logs (WoW games) that are not understandable for the average user into an understandable form and analyze the result of the combat.</p>
+                <span>
+                    <p>Social links:</p>
+                    <a href="https://vk.com/pro_solinx">VK</a>
+                    <a href="https://twitter.com/_solinx_">Twitter</a>
+                    <a href="https://www.linkedin.com/in/oleg-fedosov-a96345172/">Linkedin</a>
+                </span>
             </div>
         </span>
         <span>
