Update business card

--- a/businessCard/index.html
+++ b/businessCard/index.html
@@ -122,8 +122,9 @@
                     </div>
                     <img src="src/images/DetailsAnalysisGCL_PersonalChat.png">
                     <span class="applications__desktop-application_download">  
-                        <button type="button" class="btn btn-primary btn-lg" disabled>Скачать</button>
-                        <p style="opacity: 0.5; font-size: 13px;">Приложение пока что не доступно для скачивания</p>
+                        <button type="button" class="desktop-app-download btn btn-primary btn-lg">Скачать</button>
+                        <p style="opacity: 0.5; font-size: 13px; display: none;">Приложение пока что не доступно для скачивания</p>
+                        <p style="opacity: 0.5; font-size: 13px;">Приложеие с ограниченым функционалом</p>
                     </span>
                 </div>
             </span>
