--- a/src/CombatAnalysis.WebApp/ClientApp/public/index.html
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/index.html
@@ -26,6 +26,7 @@
       <noscript>
           You need to enable JavaScript to run this app.
       </noscript>
+      <div id="root"></div>
       <div class="main"></div>
       <!--
       This HTML file is a template.
